# fbmuck

./: INSTALLATION  Makefile  Makefile.in  README  README.ssl  WARNING  configure  configure.in  fbmuck.spec  fuzzball.cnf  mkdir_recursive
contrib/jresolver/: resolver
contrib/muv/: loopy.muv  parse_rules.y  xeet  yeet  zeet
contrib/xml/: fbmuck606.xml
dbs/advancedb/data/: base6.db
dbs/advancedb/muf/: muf
dbs/basedb/data/: base.db  parmfile.cfg
dbs/fb-base/: fb-base.db
docs/: 8-bit  COPYING  Documentation  REPORTING  RWHO.docs  mpihelp.html  muck.doc  muckhelp.html  mufman.html
game/: restart  restart.in
game/data/: help.txt  man.txt  motd.txt  mpihelp.raw  mpihelp.txt  muckhelp.raw  mufman.raw  parmfile.cfg  wordlist.txt
game/data/info/: mpidocs  mpidocs2  muckhelp  mufman1
include/: array.h  autoconf.h.in  config.h  copyright.h  crt_malloc.h  db.h  db_header.h  dbsearch.h  defaults.h  externs-auto.h  externs.h  fb.h  fbstrings.h  inst.h  interface.h  interp.h  match.h  mcp.h  mcpgui.h  mcppkg.h  mfun.h  mfunlist.h  mpi.h  msgparse.h  mufevent.h  p_array.h  p_connects.h  p_db.h  p_error.h  p_float.h  p_math.h  p_mcp.h  p_misc.h  p_props.h  p_regex.h  p_stack.h  p_strings.h  params.h  patchlevel.h  props.h  (+5 more)
scripts/: fbmuck-redhat-init  fbmuck-sysvinit  fbmuck.sh  start-muck.sh
src/: .indent.pro  .splintrc  CHANGESfb5  CHANGESfb6  COMPILING  FLAGS  Flows  GUIPRIMS.txt  Makefile  Makefile.in  TO.DO  TODO  TUNES.TXT  announce.c  array.c  boolexp.c  buildwarns  compile.c  compress.c  config.cache  configure  configure.in  copyright.c  create.c  crt_malloc.c  db.c  debugger.c  disassem.c  diskprop.c  edit.c  events.c  extract.c  game.c  guitest.muf  hashtab.c  help.c  inst.c  interface.c  interp.c  log.c  (+54 more)
src/IDEAS/: DebugPrims  MuvParse.c  Sockets
src/helptk/: edithelp.tcl  tree.tcl
src_docs/: README  driver.txt  game.c.txt  interface.c.txt
win32/: autoconf.h  makefile.win  precompile.bat  regex.cpp  restart.cpp  version.cpp  win32-regex-readme.txt  win32.cpp  win32.h
